--- a/content/themes/dude/sass/modules/_jobs.scss
+++ b/content/themes/dude/sass/modules/_jobs.scss
@@ -30,6 +30,21 @@ span.open-positions-count {
 
 .nav-primary .menu-items a.has-jobs {
   overflow: visible;
+  height: 37px;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+
+  @media (min-width: 760px) {
+    height: 50px;
+  }
+
+  @media (max-width: 500px) {
+    height: 32px;
+  }
+
+  @media (max-width: 400px) {
+    height: 28px;
+  }
 }
 
 // Blocks with lesser padding
